--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+:root{
+  --tw-text-opacity: 1;
+  --primary: rgb(15 23 42 / var(--tw-text-opacity));
+  --secondary: rgb(71 85 105 / var(--tw-bg-opacity));
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border-radius: 14px;
+  border: 3px solid var(--primary);
+}
+
 /* navbar? */
 ul .active{
   --tw-text-opacity: 1;
@@ -14,4 +36,11 @@ ul li a:hover {
     color: rgb(29 78 216 / var(--tw-text-opacity)) !important;
  transition: all .1s;
 
+}
+
+a{
+  color:white;
+}
+#signOut:hover{
+color: white !important;
 }
